# bayesProp

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile_Fastapi  Makefile  README.md  build_run.sh  codecov.yml  justfile  main.py  pyproject.toml
.github/: copilot-instructions.yml
.github/workflows/: create_docs_gh_page.yml  documentation.yml  publish_pypi.yml  publish_pypi_test.yml  tests.yml
docs/: beta_beta_posterior_inference.md  hierarchical_beta_regression_model.md  hierarchical_beta_regression_model_slides.md  hierarchical_logistic_normal_model.md
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: changelog.md  getting_started.md  index.md
docs/mkdocs/docs/api/: bayes_nonpaired.md  bayes_paired_bootstrap.md  bayes_paired_laplace.md  bayes_paired_pg.md  bfda_utils.md  data_schemas.md  index.md  operation_characteristics.md  operation_characteristics_paired.md  sequential.md
docs/mkdocs/docs/guide/: bfda.md  decision_rules.md  frequentist_evaluation.md  frequentist_evaluation_paired.md  nonpaired.md  paired_bootstrap.md  paired_laplace.md  paired_pg.md
docs/mkdocs/docs/javascripts/: mathjax.js
docs/mkdocs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/mkdocs/site/api/: index.html
docs/mkdocs/site/api/bayes_nonpaired/: index.html
docs/mkdocs/site/api/bayes_paired_laplace/: index.html
docs/mkdocs/site/api/bayes_paired_pg/: index.html
docs/mkdocs/site/api/bfda_utils/: index.html
docs/mkdocs/site/api/data_schemas/: index.html
docs/mkdocs/site/getting_started/: index.html
docs/mkdocs/site/guide/bfda/: index.html
docs/mkdocs/site/guide/decision_rules/: index.html
docs/mkdocs/site/guide/nonpaired/: index.html
docs/mkdocs/site/guide/paired_laplace/: index.html
docs/mkdocs/site/guide/paired_pg/: index.html
docs/mkdocs/site/search/: search_index.json
src/bayesAB/config/: config.py  global_config.py  input_output.yaml  model_config.yaml
src/bayesAB/resources/: bayes_nonpaired.py  bayes_paired.py  bayes_paired_laplace.py  bayes_paired_pg.py  data_schemas.py
src/bayesAB/services/: file.py
src/bayesAB/utils/: utils.py
src/bayesprop/resources/: base.py  bayes_nonpaired.py  bayes_paired.py  bayes_paired_bootstrap.py  bayes_paired_laplace.py  bayes_paired_pg.py  data_schemas.py
src/bayesprop/services/: file.py
src/bayesprop/utils/: operation_characteristics.py  operation_characteristics_paired.py  utils.py
src/my_package/config/: global_config.py
src/my_package/services/: file.py
src/notebooks/: .deepeval-cache.json  .deepeval_telemetry.txt  bayesian_AB_model_comparison_nonpaired.ipynb  bayesian_AB_model_comparison_paired_gibbs.ipynb  bayesian_AB_model_comparison_paired_laplace.ipynb  bayesian_AB_rope_analysis.ipynb  bayesian_bootstrap_paired_binary.ipynb  bayesian_uncertainty_of_overall_ind_scores .ipynb  deepeval_bayesprop_comparison.ipynb  deepeval_bayesprop_example.ipynb  eval_dataset_creation.ipynb  operating_characteristics_nonpaired.ipynb  operating_characteristics_paired_laplace.ipynb  sequential_nonpaired_demo.ipynb  sequential_paired_laplace_demo.ipynb
tests/: test_bayes_nonpaired.py  test_bayes_paired_bootstrap.py  test_bayes_paired_laplace.py  test_bayes_paired_pg.py  test_bfda_utils.py  test_data_schemas.py  test_file_services.py  test_operation_characteristics.py  test_operation_characteristics_paired.py
