[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bayesAB"
version = "0.1.0"
description = "Basic data science project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
]

keywords = ["Bayesian inference", "A/B testing", "Proportions"]

authors = [
    { name = "Alexander Vosseler", email = "avosseler@nemetschek.com" }
]

[project.optional-dependencies]
notebook = [
  "jupyter",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bayesAB*"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
